@@ -320,6 +320,13 @@ public final class Level0ArrayOperator<I,T>
     }
 
 
+
+
+    
+    public Level0ArrayOperator<I, T> sortBy(final IFunction<? super T, ?> by) {
+        return new Level0ArrayOperator<I, T>(this.type, getTarget().execute(FnArray.of(this.type).sortBy(by)));
+    }
+
     
 
 
